Continuous update   - shorten the functions in main.js file   - update s.css file   - correct grammar error in index.html

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
             </div>
         </section>
         <section class="task">
-            <input type="text" class="task-input" id="task-input" placeholder="... Add task to your To Do ..." autofocus>
-            <button class='input-btn btn-hover' id="input-btn">Add Task</button>
+            <input type="text" class="task-input" id="task-input" placeholder="... Add a task to your To Do ..."
+                autofocus>
+            <button class='input-btn btn-hover' id="input-btn">Add task</button>
         </section>
         <section class="show-tasks">
             <ul class="list-container"></ul>
